@@ -37,6 +37,8 @@ git-annex (4.20130418) UNRELEASED; urgency=low
     their API indicates it does. Always refuse to drop from there.
   * webapp: Display some additional information about a repository on its edit
     page.
+  * Automatically register public urls for files uploaded to the
+    Internet Archive.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 18 Apr 2013 16:22:48 -0400
 
